logs/validate.20260408-043556.log
Mode: isolate
Isolate: including Chap18 Chap19 Chap21 Chap02
error[E0425]: cannot find value `nonlinear_arith` in this scope
  --> src/Chap21/Problem21_1.rs:83:21
   |
83 |                 by (nonlinear_arith);
   |                     ^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `by` in this scope
  --> src/Chap21/Problem21_1.rs:83:17
   |
83 |                 by (nonlinear_arith);
   |                 ^^
   |
help: a local variable with a similar name exists
   |
83 -                 by (nonlinear_arith);
83 +                 y (nonlinear_arith);
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 3s
Sampled Memory Usage: peak rust_verify RSS: 3428MB, peak z3 RSS: 363MB, min free: 23078MB
Sampled CPU Usage: rust_verify: 47s, z3 children: 19s
